fixing gap details

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,6 +1,6 @@
 #about {
   display: flex;
-  padding: 0 2rem;
+  padding: 5rem 2rem;
   background-color: var(--surface-color);
   justify-content: space-between;
   align-items: center;
@@ -47,7 +47,7 @@
       margin-left: 1.5rem;
       width: 100%;
       gap: 0.5rem;
-      transform: translateY(-270px);
+      transform: translateY(-370px);
     }
     & p {
       font-size: var(--fs-base);
@@ -64,7 +64,7 @@
     & img {
       width: 19.5rem;
       transform: translateX(7.5px);
-      transform: translateY(-250.62px);
+      transform: translateY(-333.62px);
     }
   }
 }
